seperated the modules files to get a better look at the files

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,5 @@
 ﻿@import "base/variables";
-@import "base/normalize";
+// @import "base/normalize";
 @import "vendors/bootstrap";
 @import "helpers/functions";
 @import "helpers/mixins";
